# policydb

./: .gitignore  CLAUDE.md  PolicyDB ReadMe.md  pyproject.toml
.claude/: launch.json
Coverage/: .gitignore  README.md
docs/: 2026-04-20-swift-macos-frontend-design.md  QA-bug-report-2026-03-21.md  outlook-setup.md
docs/simmer/: trajectory.md
migrations/: 002_add_project_name.sql
scripts/: README.txt  SCRIPTS.md  com.policydb.backup.plist  dev-install.sh  export_swift_fixtures.py  install-backup-schedule.sh  install.sh  launch.command  make_package.sh  policydb-backup.sh  recover_deleted_program_policies.py  seed_test_data.py  work-install.sh
templates/: sample-export.html  sample-export.xlsx  sample-export.xlsx.py
tests/: conftest.py  test_add_location_button.py  test_ai_import_exposures.py  test_carrier_normalization.py  test_clean_email.py  test_compliance.py  test_contact_add_no_false_dupe.py  test_contact_expertise.py  test_data_normalization.py  test_db.py  test_email_sync.py  test_export.py  test_exposure_column_drop.py  test_exposures.py  test_followup_dedup.py  test_followup_threading.py  test_followups_tiers.py  test_importer.py  test_issue_scratchpad.py  test_issue_sla.py  test_llm_schemas.py  test_normalize_matching.py  test_onboard.py  test_open_tasks.py  test_open_tasks_routes.py  test_outlook_contacts_compile.py  test_outlook_search_compile.py  test_outlook_search_route.py  test_outlook_trigger_search.py  test_paths.py  test_phase4_migration.py  test_program_carriers.py  test_program_cell_patch_clear_currency.py  test_program_delete_row_preserves_policy.py  test_program_derived_dates.py  test_program_in_force_filter.py  test_programs_v2.py  test_project_pipeline.py  test_reconcile_algorithm.py  (+17 more)
(+869 files in other folders)
