[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policydb"
version = "1.0.0"
description = "Insurance Book of Business Management CLI"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8",
    "humanize>=4.0",
    "dateparser>=1.1",
    "rapidfuzz>=3.0",
    "babel>=2.10",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.scripts]
policydb = "policydb.cli:main"
pdb = "policydb.cli:main"

[project.optional-dependencies]
datasette = ["datasette>=0.64"]

[tool.setuptools.packages.find]
where = ["src"]
